# mai-pai-app

./: README.md  档案.docx
Mai_Pal_APP-main/: README-VIBE.md  README.md  docker-compose.yml  pyproject.toml
Mai_Pal_APP-main/backend/: agent.py  pyproject.toml
Mai_Pal_APP-main/backend/agents/: agent.py
Mai_Pal_APP-main/backend/database/: db.py
Mai_Pal_APP-main/backend/models/: models.py
Mai_Pal_APP-main/backend/nodes/: expert_review_node.py  input_processor.py  observation_node.py  output_node.py  pulse_node.py  question_node.py  voice_node.py
Mai_Pal_APP-main/backend/tools/: __init__.py
Mai_Pal_APP-main/docs/: ARCHITECTURE.md  DB-SCHEMA.md  PRODUCT-SPEC-v1.2.2.md  TCM-PROMPTS.md
Mai_Pal_APP-main/frontend/mai_pal_app/: pubspec.yaml
